[package]
edition = "2021"
name = "katana-load-test"
license = "Apache-2.0"
license-file = "LICENSE"
repository = "https://github.com/kariy/katana-load-test/"
version = "0.1.0"

[dependencies]
anyhow = "1.0.95"
clap = "4.5.28"
futures = "0.3.31"
reqwest = "0.12.12"
serde = "1.0.217"
starknet = "0.13.0"
tokio = "1.43.0"
url = "2.5.4"

katana-node-bindings = { git = "https://github.com/dojoengine/dojo" }
katana-primitives = { git = "https://github.com/dojoengine/dojo" }
dojo-utils = { git = "https://github.com/dojoengine/dojo" }
cainome = { git = "https://github.com/cartridge-gg/cainome", tag = "v0.4.12", features = [
	"abigen-rs",
] }
